--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@ svg {
     overflow: visible;
 }
 
-#actor1, #actor2, #actor3, #actor4, #actor5, #actor6, #actor7, #actor8, #actor9, #title, #bell, #snow {
+#actor1, #actor2, #actor3, #actor4, #actor5, #actor6, #actor7, #actor8, #actor9, #title, #bell, #snow, #description {
   display: none;
 }
 
-#background {
+#background path.cls-1 {
   -webkit-animation: rotate-and-scale-animation 2s linear;
 }
 
@@ -35,12 +35,31 @@ svg {
     }
 }
 
-#actor1:hover, #actor2:hover, #actor3:hover, #actor4:hover, #actor5:hover, #actor6:hover, #actor7:hover, #actor8:hover, #actor9:hover {
-  -webkit-animation: hover-animation 0.5s linear;
+#background path.cls-2 {
+  -webkit-animation: anti-rotate-and-scale-animation 2s linear;
+}
+
+@-webkit-keyframes anti-rotate-and-scale-animation {
+    0%  {
+      transform-origin: center center;
+      -webkit-transform: rotate(360deg) scale(0);
+    }
+    100% {
+      transform-origin: center center;
+      -webkit-transform: rotate(0deg) scale(1);
+    }
+}
+
+#actor1:hover, #actor2:hover, #actor3:hover, #actor4:hover, #actor5:hover, #actor6:hover, #actor7:hover, #actor8:hover, #actor9:hover, #description:hover {
+  -webkit-animation: scale-animation 0.5s linear;
   -webkit-animation-fill-mode: forwards;
 }
 
-@-webkit-keyframes hover-animation {
+.cls-29.animate {
+  -webkit-animation: scale-animation 1s linear;
+}
+
+@-webkit-keyframes scale-animation {
     0%  {
       transform-origin: center center;
       -webkit-transform: scale(1);
@@ -49,4 +68,8 @@ svg {
       transform-origin: center center;
       -webkit-transform: scale(1.5);
     }
+}
+
+.cls-29 {
+  display: none;
 }
