--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: #fff;
+  padding: 10px;
 }
 
 svg {
@@ -17,7 +18,7 @@ svg {
 }
 
 #background {
-  -webkit-animation: rotate-and-scale-animation 2s linear;
+  -webkit-animation: rotate-and-scale-animation 2s ease-in-out;
 }
 
 #bell.animate {
@@ -27,11 +28,11 @@ svg {
 @-webkit-keyframes rotate-and-scale-animation {
     0%  {
       transform-origin: center center;
-      -webkit-transform: rotate(0deg) scale(0);
+      -webkit-transform: scale(0);
     }
     100% {
       transform-origin: center center;
-      -webkit-transform: rotate(360deg) scale(1);
+      -webkit-transform: scale(1);
     }
 }
 
